<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

  <com.vann.oschina.widget.Topbar
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/id_topbar"
      android:gravity="center_vertical"
      custom:lefttext="@string/app_name"
      custom:lefttextcolor="@color/white"
      custom:lefttextsize="12sp"
      custom:leftdrawable="@mipmap/ic_drawer"
      custom:rightbackground="@mipmap/ic_menu_search"
      custom:rightwidth="35dp"
      custom:rightheight="35dp"
      />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/fg_content"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tab_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_comprehensive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:drawableTop="@mipmap/tab_comprehensive_icon"
            android:text="@string/comprehensive"
            android:onClick="onComprehensiveClicked"
            android:textColor="@color/tab_text_bg"/>
        <RadioButton
            android:id="@+id/rb_move"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:drawableTop="@mipmap/tab_move_icon"
            android:text="@string/move"
            android:onClick="onMoveClicked"
            android:textColor="@color/tab_text_bg"/>
        <RadioButton
            android:id="@+id/rb_found"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@mipmap/tab_found_icon"
            android:gravity="center"
            android:text="@string/found"
            android:onClick="onFoundClicked"
            android:textColor="@color/tab_text_bg"/>
        <RadioButton
            android:id="@+id/rb_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:drawableTop="@mipmap/tab_me_icon"
            android:text="@string/me"
            android:onClick="onMyClicked"
            android:textColor="@color/tab_text_bg"/>
    </RadioGroup>

</LinearLayout>
