<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

   <include layout="@layout/layout_top"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/news"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:drawablePadding="15dp"
        android:clickable="true"
        android:background="@drawable/item_selector"
        android:drawableLeft="@mipmap/icon_my_message"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_bg"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/blog"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:drawablePadding="15dp"
        android:clickable="true"
        android:background="@drawable/item_selector"
        android:drawableLeft="@mipmap/icon_my_blog"/>
    <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/line_bg"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/note"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:drawablePadding="15dp"
        android:clickable="true"
        android:background="@drawable/item_selector"
        android:drawableLeft="@mipmap/icon_my_note"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_bg"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/team"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:background="@drawable/item_selector"
        android:drawablePadding="15dp"
        android:clickable="true"
        android:drawableLeft="@mipmap/icon_my_team"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_bg"/>
</LinearLayout>