<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_bg"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_friend"
        android:drawableLeft="@mipmap/icon_explore_friends"
        android:drawablePadding="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/item_selector"
        android:clickable="true"
        android:text="@string/friends"
        android:gravity="center_vertical"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_bg"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_bg"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_finduser"
        android:drawableLeft="@mipmap/icon_explore_finduser"
        android:drawablePadding="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/item_selector"
        android:clickable="true"
        android:text="@string/finduser"
        android:gravity="center_vertical"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_bg"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_event"
        android:drawableLeft="@mipmap/icon_explore_event"
        android:drawablePadding="15dp"
        android:paddingTop="10dp"
        android:background="@drawable/item_selector"
        android:clickable="true"
        android:paddingBottom="10dp"
        android:text="@string/event"
        android:gravity="center_vertical"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_bg"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_bg"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_scane"
        android:drawableLeft="@mipmap/icon_explore_scan"
        android:drawablePadding="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/item_selector"
        android:clickable="true"
        android:text="@string/scan"
        android:gravity="center_vertical"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_bg"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_shake"
        android:drawableLeft="@mipmap/icon_explore_shake"
        android:drawablePadding="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/shake"
        android:background="@drawable/item_selector"
        android:clickable="true"
        android:gravity="center_vertical"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_bg"
        />

</LinearLayout>